--- a/front/src/App.css
+++ b/front/src/App.css
@@ -14,25 +14,30 @@ body {
     padding-top: 20px;
   }
   
-  .sidenav div .isin {
+  .isin {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
     font-size: 20px;
-    color: #818181;
     display: block;
   }
   
-  .sidenav div:hover {
+  .isin-notSelected {
+    color: #818181;
+  }
+  .isin-notSelected:hover {
     color: #f1f1f1;
   }
-  
+
+  .isin-selected {
+    color: rgb(255, 81, 81);
+  }
+  .isin-selected:hover {
+    color: red;
+  }
+
   .main {
     margin-left: 160px; /* Same as the width of the sidenav */
-    font-size: 28px; /* Increased text to enable scrolling */
+    font-size: 18px; /* Increased text to enable scrolling */
     padding: 0px 10px;
   }
   
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
